--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,11 +1,9 @@
-$testcolor: #0ff;
+@charset "UTF-8";
 
-table{
-  border: 1px solid #ccc;
-  td{
-    color: red;
-  }
-}
-div{
-  color: $testcolor;
+body{
+  width: 100%;
+  min-width: 320px;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 10px;
 }
