--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,5 +5,10 @@ body{
   min-width: 320px;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 10px;
+  padding: 10px !important;
+
+  //モーダルスタイル打ち消し用
+  &.modal-open{
+    overflow: auto;
+  }
 }
