--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,8 @@
 @charset "UTF-8";
 
+@import "../../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
+
+
 body{
   width: 100%;
   min-width: 320px;
